--- a/week02/3.匹配字符串字面量.md
+++ b/week02/3.匹配字符串字面量.md
@@ -1,8 +1,128 @@
-思路：通过BNF 参照 ecma来写表达式
+# 思路：通过BNF 参照 ecma来写表达式
 
-/".+"|'.+'/
+## StringLiteral ::
+    "DoubleStringCharacters[opt]"
+    'SingleStringCharacters[opt]'
 
-StringLiteral ::
-    "DoubleStringCharacters"
-    'SingleStringCharacters'
+    即 ([^"'\\]|(\\([^\dxu\r\n\u2028\u2029]|0(?!\d)|x[\da-fA-F]{2}|u(10)?[\da-fA-F]{4})))*
+
+### DoubleStringCharacters ::
+    DoubleStringCharacter DoubleStringCharacters[opt]
+
+    即 ([^"\\]|(\\([^\dxu\r\n\u2028\u2029]|0(?!\d)|x[\da-fA-F]{2}|u(10)?[\da-fA-F]{4})))*
+
+### SingleStringCharacters ::
+    SingleStringCharacter SingleStringCharactersopt
+    
+    即 ([^'\\]|(\\([^\dxu\r\n\u2028\u2029]|0(?!\d)|x[\da-fA-F]{2}|u(10)?[\da-fA-F]{4})))*
+
+#### SingleStringCharacter ::
+    SourceCharacter but not one of ' or \ or LineTerminator 
+    <LS>
+    <PS>
+    \ EscapeSequence
+    LineContinuation
+
+    即[^'\\]|(\\([^\dxu\r\n\u2028\u2029]|0(?!\d)|x[\da-fA-F]{2}|u(10)?[\da-fA-F]{4}))
+
+#### DoubleStringCharacter ::
+    SourceCharacter but not one of " or \ or LineTerminator  即 [^"\\\n\r\u2028\u2029]
+    <LS>                                                     即 \u2028   
+    <PS>                                                     即 \u2029
+    \ EscapeSequence                                         即 \\([^\dxu\r\n\u2028\u2029]|0(?!\d)|x[\da-fA-F]{2}|u(10)?[\da-fA-F]{4})
+    LineContinuation                                         即 [\n\u2029(\r\n)(\r(?!\n)\u2028)]
+
+    综合为
+    [^"\\]|(\\([^\dxu\r\n\u2028\u2029]|0(?!\d)|x[\da-fA-F]{2}|u(10)?[\da-fA-F]{4}))
+
+#### LineTerminator :: 
+    <LF> 
+    <CR> 
+    <LS>
+    <PS>
+
+    综合
+    [\n\r\u2028\u2029]
+
+#### LineContinuation ::
+    \ LineTerminatorSequence
+
+
+#### EscapeSequence :: 
+    CharacterEscapeSequence       即 [^\dxu\r\n\u2028\u2029]
+    0 [lookahead ∉ DecimalDigit]  即 0(?!\d)
+    HexEscapeSequence             即 x[\da-fA-F]{2}
+    UnicodeEscapeSequence         即 u(10)?[\da-fA-F]{4}
+
+    即 [^\dxu\r\n\u2028\u2029]|0(?!\d)|x[\da-fA-F]{2}|u(10)?[\da-fA-F]{4}
+
+#### CharacterEscapeSequence :: 
+    SingleEscapeCharacter
+    NonEscapeCharacter
+
+    综合
+    [^\dxu\r\n\u2028\u2029]
+
+#### SingleEscapeCharacter :: one of
+    ' " \ b f n r t v
+
+    综合
+    ['"\\bfnrtv]
+
+#### NonEscapeCharacter ::
+    SourceCharacter but not one of EscapeCharacter or LineTerminator
+    
+    综合
+    [^'"\\bfnrtv\dxu\r\n\u2028\u2029]
+
+#### EscapeCharacter :: 
+    SingleEscapeCharacter
+    DecimalDigit
+    x 
+    u
+
+    综合
+    ['"\\bfnrtv\dxu]
+
+#### DecimalDigit :: one of
+    0123456789
+
+#### HexEscapeSequence ::
+    x HexDigit HexDigit
+    
+    即 x[\da-fA-F]{2}
+
+#### UnicodeEscapeSequence :: 
+    u Hex4Digits
+    u{ CodePoint } 
+
+    即 u(10)?[\da-fA-F]{4}
+    
+#### Hex4Digits ::
+    HexDigit HexDigit HexDigit HexDigit
+    
+    即 [\da-fA-F]{4}
+    
+#### HexDigit :: one of
+    0123456789abcdefABCDEF
+
+    即 [\da-fA-F]
+
+#### CodePoint ::
+    HexDigits but only if MV of HexDigits ≤ 0x10FFFF
+
+    即 (10)?[\da-fA-F]{4}
+
+#### LineTerminatorSequence :: 
+    <LF>
+    <CR>[lookahead ≠ <LF>] <LS>
+    <PS>
+    <CR><LF>
+
+    即[\n\u2029(\r\n)(\r(?!\n)\u2028)]
+
+    
+
+
+
 
